[gd_scene load_steps=18 format=3 uid="uid://6k04fg36m4jw"]

[ext_resource type="Script" path="res://Scripts/OptionsMenu.gd" id="1_4xrll"]
[ext_resource type="Theme" uid="uid://1cxfhyrtntpc" path="res://Prefabs/Themes/OC_theme.tres" id="1_k65yt"]
[ext_resource type="Texture2D" uid="uid://diugma7htyb5a" path="res://Textures/XboxIcon.png" id="3_i1bql"]
[ext_resource type="Texture2D" uid="uid://cme4mvhs6kq2s" path="res://Textures/PSIcon.png" id="4_5hrr0"]
[ext_resource type="Texture2D" uid="uid://b56bwp4qe8vvr" path="res://Textures/NinIcon.png" id="5_r64y2"]
[ext_resource type="AudioStream" uid="uid://sp3o7vapcqtr" path="res://Audio/Trinity (Remastered).wav" id="6_276t2"]
[ext_resource type="Texture2D" uid="uid://dltl7pigjnknr" path="res://Textures/SteamDeck.png" id="6_u3afk"]
[ext_resource type="Texture2D" uid="uid://cbag41pag5icy" path="res://Textures/ControlsKBM.jpg" id="7_1blc1"]
[ext_resource type="Texture2D" uid="uid://btwyu6r256e1p" path="res://Textures/ControlsPS.jpg" id="7_7a3b0"]
[ext_resource type="Texture2D" uid="uid://b1y15r3s1bhx2" path="res://Textures/WiiUIcon.png" id="7_rs6qe"]
[ext_resource type="Texture2D" uid="uid://boubhccyf11yu" path="res://Textures/WiiIcon.png" id="8_ry2om"]
[ext_resource type="Texture2D" uid="uid://cnwq2bykrhg2r" path="res://Textures/Dreamcast.png" id="9_l7mtv"]
[ext_resource type="Script" path="res://Scripts/UId.gd" id="9_ustc1"]

[sub_resource type="Animation" id="Animation_511jo"]
resource_name = "DisplayKBM"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KBMDisplay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KBMDisplay:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0ue1y"]
resource_name = "FinishDisplay"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ControllerDisplay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ControllerDisplay:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c2w07"]
resource_name = "SwitchToController"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KBMDisplay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KBMDisplay:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ControllerDisplay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ControllerDisplay:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"changeConDIS"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5788"]
_data = {
"DisplayKBM": SubResource("Animation_511jo"),
"FinishDisplay": SubResource("Animation_0ue1y"),
"SwitchToController": SubResource("Animation_c2w07")
}

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4xrll")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer"]
layout_mode = 2
color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
text = "Graphics"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label1" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Aspect:"

[node name="Resopt" type="OptionButton" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
selected = 0
item_count = 1
popup/item_0/text = "Auto"

[node name="FullCheckBox" type="CheckBox" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
button_pressed = true
text = "Fullscreen"

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Shadows:"

[node name="ShadowsDropDown" type="OptionButton" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
selected = 0
item_count = 2
popup/item_0/text = "High Detail"
popup/item_1/text = "Low Detail"
popup/item_1/id = 1

[node name="Label3" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Zoom:"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 11
text = "+                                                                              "

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 11
text = "-"

[node name="ZoomSlider" type="HSlider" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 5.0
value = 3.0

[node name="SSCheckButton" type="CheckButton" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
text = "Screen Shake"

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
text = "Controller:"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Rumble"

[node name="UseCon" type="CheckBox" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Show Controller Icons"

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Controller Type:"

[node name="ControllerDropDown" type="OptionButton" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
selected = 0
item_count = 4
popup/item_0/text = "Xbox"
popup/item_0/icon = ExtResource("3_i1bql")
popup/item_0/id = 2
popup/item_1/text = "PlayStation"
popup/item_1/icon = ExtResource("4_5hrr0")
popup/item_1/id = 1
popup/item_2/text = "Nintendo"
popup/item_2/icon = ExtResource("5_r64y2")
popup/item_2/id = 2
popup/item_3/text = "Steam Deck"
popup/item_3/icon = ExtResource("6_u3afk")
popup/item_3/id = 3

[node name="ControllerDropDownJ" type="OptionButton" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
selected = 0
item_count = 8
popup/item_0/text = "Xbox"
popup/item_0/icon = ExtResource("3_i1bql")
popup/item_0/id = 2
popup/item_1/text = "PlayStation"
popup/item_1/icon = ExtResource("4_5hrr0")
popup/item_1/id = 1
popup/item_2/text = "Nintendo"
popup/item_2/icon = ExtResource("5_r64y2")
popup/item_2/id = 2
popup/item_3/text = "Steam Deck"
popup/item_3/icon = ExtResource("6_u3afk")
popup/item_3/id = 3
popup/item_4/text = "Wii U gamepad"
popup/item_4/icon = ExtResource("7_rs6qe")
popup/item_4/id = 4
popup/item_5/text = "Wii Nunchuck"
popup/item_5/icon = ExtResource("8_ry2om")
popup/item_5/id = 5
popup/item_6/text = "Dreamcast VMU"
popup/item_6/icon = ExtResource("9_l7mtv")
popup/item_6/id = 6
popup/item_7/text = "Monoprice 3D printer"
popup/item_7/id = 7

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label4" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
text = "Multiplayer"

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4"]
layout_mode = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
text = "Port"

[node name="PortEdit" type="LineEdit" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
max_length = 4
virtual_keyboard_type = 2

[node name="DispPingBox" type="CheckBox" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
text = "Display Ping"

[node name="Label3" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
text = "Misc."

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3"]
layout_mode = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="DiscordRich" type="CheckButton" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
button_pressed = true
text = "Discord Rich Presence"

[node name="BanterBox" type="CheckBox" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
text = "Banter Between characters"

[node name="Label" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
text = "How ofton Banter Occures"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
text = "10"

[node name="Label3" type="Label" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 15
text = "130"

[node name="BanterSlider" type="HSlider" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
min_value = 10.0
max_value = 130.0
step = 10.0
value = 70.0

[node name="UH2Box" type="CheckBox" parent="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
text = "Hey Guys! today I will show U how to 
make an OC!
Make sure to rate 5 stars and subscribe to
my channel!"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -243.0
offset_top = -41.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2

[node name="ResetSaveButton" type="Button" parent="ColorRect/MarginContainer/ColorRect/MarginContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Reset Saves"

[node name="ControlsButton" type="Button" parent="ColorRect/MarginContainer/ColorRect/MarginContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Controls"

[node name="Button" type="Button" parent="ColorRect/MarginContainer/ColorRect/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_k65yt")
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_276t2")

[node name="ControllerDisplay" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -779.0
offset_top = -425.0
offset_right = 779.0
offset_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_7a3b0")

[node name="KBMDisplay" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.4)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -779.0
offset_top = -425.0
offset_right = 779.0
offset_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_1blc1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p5788")
}

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_ustc1")

[connection signal="item_selected" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Resopt" to="." method="_on_resopt_item_selected"]
[connection signal="toggled" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/FullCheckBox" to="." method="_on_full_check_box_toggled"]
[connection signal="item_selected" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ShadowsDropDown" to="." method="_on_shadows_drop_down_item_selected"]
[connection signal="drag_ended" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ZoomSlider" to="." method="_on_zoom_slider_drag_ended"]
[connection signal="toggled" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SSCheckButton" to="." method="_on_ss_check_button_toggled"]
[connection signal="toggled" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/UseCon" to="." method="_on_use_con_toggled"]
[connection signal="item_selected" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/ControllerDropDown" to="." method="_on_controller_drop_down_item_selected"]
[connection signal="item_selected" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/ControllerDropDownJ" to="." method="_on_controller_drop_down_j_item_selected"]
[connection signal="text_submitted" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4/VBoxContainer/PortEdit" to="." method="_on_port_edit_text_submitted"]
[connection signal="toggled" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer4/VBoxContainer/DispPingBox" to="." method="_on_disp_ping_box_toggled"]
[connection signal="toggled" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer/DiscordRich" to="." method="_on_discord_rich_toggled"]
[connection signal="toggled" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer/BanterBox" to="." method="_on_banter_box_toggled"]
[connection signal="drag_ended" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer/BanterSlider" to="." method="_on_banter_slider_drag_ended"]
[connection signal="toggled" from="ColorRect/MarginContainer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/VBoxContainer/UH2Box" to="." method="_on_uh_2_box_toggled"]
[connection signal="pressed" from="ColorRect/MarginContainer/ColorRect/MarginContainer/HBoxContainer2/ResetSaveButton" to="." method="_on_reset_save_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/ColorRect/MarginContainer/HBoxContainer2/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/ColorRect/MarginContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
